2007-07-24  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-search-parser.c: 
	Convert search across to use Rarian
	and clean up lots of crud from the file
	
2007-07-23  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.ac:
	* src/yelp-base.c:
	* src/yelp-search-parser.c:
	* src/yelp-search.c:
	* src/yelp-window.c:
	* src/yelp-window.h:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* src/Makefile.am:
	* src/yelp-main.c:
	Massive cleanup
	Remove old code from yelp-utils
	Fix shutdown requests from sessions (hopefully)
	Remove as many warnings as possible (the rest are
	mostly mozilla errors)
	Make sure we get and set GLIB_GENMARSHAL as, apparently,
	we have never done this which seems to result in badness
	making the marshal.list
	
	* src/Makefile.am: 
	* configure.ac:
	* src/yelp-toc.c:
	* src/yelp-search-parser.c:
	* src/yelp-window.c:
	* src/yelp-info-parser.c:
	Lots of fun updates...
	Clean up yelp-window.c a LOT
	Remove old, obsolete code
	Make search, man and info mandatory
	Bump g-d-u min version to include new db2xhtml
	code
	Remove extra printf I'd forgotten
	
2007-07-10  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-window.c: 
	Handle external URI's
	Beginnings of error support (not complete)
	
2007-07-08  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-window.c: 
	* src/yelp-search.c:
	* src/yelp-search.h:
	* src/yelp-search-parser.c:
	* src/yelp-search-parser.h:
	* src/yelp-utils.c:
	* src/Makefile.am:
	First pass at searching.
	Search still relies on scrollkeeper.  Other
	than that, it seems to all work (with basic search at least)
	
	* src/yelp-db-print.c:
	* src/yelp-db-print.h:
	* src/Makefile.am:
	Make printing (pages and documents) work again.
	Although, the calling xslt needs somewhat cleaned
	up, it doesn't look particularly appealing atm.
	
	* configure.in: 
	Temporarily work around breakage in gnome-doc-utils

	* src/yelp-window.c:
	Add back (empty) print menu items to stop errors